--- a/style.css
+++ b/style.css
@@ -46,9 +46,11 @@ gap:12px;
 
 .row{
 display:flex;
+flex-direction: row;
 align-items:center;
 justify-content:space-between;
 gap:12px;
+flex-wrap: nowrap; 
 padding:8px 6px;
 border-radius:8px;
 transition:background 200ms;
@@ -59,6 +61,9 @@ transition:background 200ms;
 .holes{
 display:flex;
 gap:10px;
+flex: 1 1 auto;   
+min-width: 0;     
+overflow: hidden;
 }
 
 .hole{
@@ -66,7 +71,7 @@ width:44px;
 height:44px;
 border-radius:50%;
 background:var(--hole);
-box-shadow: inset 0 -4px 10px rgba(0,0,0,0.6), 0 4px 8px rgba(2,6,23,0.6);
+/*box-shadow: inset 0 -4px 10px rgba(0,0,0,0.6), 0 4px 8px rgba(2,6,23,0.6);*/
 display:flex;
 align-items:center;
 justify-content:center;
@@ -77,13 +82,22 @@ transition:transform 120ms;
 
 
 .peg{
-width:34px;height:34px;border-radius:50%;
+width:34px;
+height:34px;
+border-radius:50%;
 box-shadow: inset 0 -3px 6px rgba(0,0,0,0.45);
 border:3px solid rgba(0,0,0,0.22);
 }
 /* Feedback pegs */
 .feedback{
-width:76px;min-height:44px;display:grid;grid-template-columns:repeat(2,1fr);gap:6px;align-items:center;justify-items:center;
+width:76px;
+min-height:44px;
+display:grid;
+grid-template-columns:repeat(2,1fr);
+gap:6px;
+align-items:center;
+justify-items:center;
+flex: 0 0 76px;
 }
 .fpeg{width:14px;height:14px;border-radius:50%;background:#11202b;border:1px solid rgba(255,255,255,0.03)}
 .fpeg.small{width:10px;height:10px}
@@ -99,11 +113,34 @@ height:74px;background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(0,0,0
 }
 
 
-.controls{display:flex;gap:8px;}
+.controls{
+    display:grid;
+    gap:8px;}
 .btn{
-padding:8px 12px;border-radius:8px;background:#0e1b2a;color:var(--muted);border:1px solid rgba(255,255,255,0.03);cursor:pointer;box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+padding:8px 12px;
+border-radius:8px;
+background:#0e1b2a;
+color:var(--muted);
+border:1px solid rgba(255,255,255,0.03);
+cursor:pointer;
+box-shadow: 0 2px 6px rgba(0,0,0,0.4);
 }
-.btn.primary{background:linear-gradient(90deg,#ffd166,#ffb03b);color:#071122;border:none}
+.btn.primary{
+    background:linear-gradient(90deg,#ffd166,#ffb03b);
+    color:#071122;
+    border:none
+}
+.btn.start{
+    background:linear-gradient(90deg,rgb(38, 175, 38),rgb(3, 116, 3));
+    color:#071122;
+    border:none
+
+}
+.btn.stop{
+    background:linear-gradient(90deg,rgb(240, 39, 39),rgb(180, 4, 4));
+    color:#071122;
+    border:none
+}
 
 
 /* color palette */
