--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     flex: 0 0 60px;       /* kompakter, passt besser */
   }
    .feedback .fpeg {
-    filter: none; /* Default dunkel lassen */
+    background: #0b1220;
   }
   .feedback .fpeg.set {
     filter: brightness(1.3); /* helle Pins */
