Bitte benutzt kein Samsungbrowser...weiß ich jetzt auch

--- a/style.css
+++ b/style.css
@@ -227,8 +227,8 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.4);
   }
 
   .holes .hole {
-    width: 42px;
-    height: 42px;
+    width: 36px;
+    height: 36px;
   }
 
   .peg {
@@ -242,9 +242,9 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.4);
    .feedback .fpeg {
       width: 12px;
         height: 12px;
-        background: #0b1220 !important;/* dunkler Hintergrund */
+        background: #0b1220; /* dunkler Hintergrund */
         border: 1px solid rgba(255,255,255,0.15);
-        filter: none !important; /* keine Aufhellung auf Standardpins */
+        filter: none; /* keine Aufhellung auf Standardpins */
   }
   .feedback .fpeg.set {
     filter: brightness(1.3); /* helle Pins */
